[gd_scene load_steps=7 format=3 uid="uid://cm43q8shw55ww"]

[ext_resource type="Script" uid="uid://bcmdld1o6gay2" path="res://Scripts/config.gd" id="1_6u63q"]
[ext_resource type="Texture2D" uid="uid://coocrwqsi5efj" path="res://Assets/Icons/checkbox_checked.png" id="1_gyli8"]
[ext_resource type="Texture2D" uid="uid://b3ygf7hfbei4s" path="res://Assets/Icons/checkbox_unchecked.png" id="2_6u63q"]
[ext_resource type="Theme" uid="uid://cxvtw8coicn34" path="res://Assets/Fonts/new_theme_big.tres" id="4_lrmn4"]
[ext_resource type="Script" uid="uid://dwayhxqew13rt" path="res://Scripts/Confirmations/gif_delete_confirmation.gd" id="5_tkr1x"]
[ext_resource type="Script" uid="uid://777lbgr80x5b" path="res://Scripts/Confirmations/assets_delete_confirmation.gd" id="6_p4uu7"]

[node name="Config" type="Window"]
title = "Configurations"
initial_position = 4
size = Vector2i(400, 574)
unresizable = true
popup_window = true
theme_override_font_sizes/title_font_size = 35
script = ExtResource("1_6u63q")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 392.0
offset_bottom = 575.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="GeneralLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "General Settings."
mouse_filter = 1
theme_override_font_sizes/font_size = 45
text = "- General -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AutoOpenGIFsFolder" type="CheckBox" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Automatically open the GIFs Folder after generating a GIF."
theme_override_font_sizes/font_size = 40
theme_override_icons/checked = ExtResource("1_gyli8")
theme_override_icons/unchecked = ExtResource("2_6u63q")
text = "Auto open GIFs Folder"

[node name="AutoCleanup" type="CheckBox" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Automatically remove all frames/.png and .import files from the Frames Folder."
theme_override_font_sizes/font_size = 40
theme_override_icons/checked = ExtResource("1_gyli8")
theme_override_icons/unchecked = ExtResource("2_6u63q")
text = "Auto Cleanup"

[node name="Sep" type="HSeparator" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ShadersLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Settings related to Shaders."
mouse_filter = 1
theme_override_font_sizes/font_size = 45
text = "- Shaders -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DisableTitleShaders" type="CheckBox" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Disabled the Title's Ghosting Effect."
theme_override_font_sizes/font_size = 40
theme_override_icons/checked = ExtResource("1_gyli8")
theme_override_icons/unchecked = ExtResource("2_6u63q")
text = " Disable Title Shaders"

[node name="Sep2" type="HSeparator" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DangerZoneLabel" type="RichTextLabel" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Danger Zone. Changing any of these Configurations may result in permanent Data loss. You'll be given a pop-up warning before every Action."
theme_override_font_sizes/bold_italics_font_size = 45
theme_override_font_sizes/italics_font_size = 45
theme_override_font_sizes/mono_font_size = 45
theme_override_font_sizes/normal_font_size = 45
theme_override_font_sizes/bold_font_size = 45
bbcode_enabled = true
text = "[color=FF4646]- Danger Zone -[/color]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeleteGIFs" type="Button" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 60)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Deletes all .gif files in the GIFs Folder"
theme_override_font_sizes/font_size = 40
text = "Delete all GIFs"

[node name="Sep3" type="HSeparator" parent="Control/MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="DeleteAssetsFolders" type="Button" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 60)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Moves the 'Dialoguer Assets' Directory and any files within it to the Trash."
theme_override_font_sizes/font_size = 40
text = "Delete Assets Folder"

[node name="Sep6" type="HSeparator" parent="Control/MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Sep5" type="HSeparator" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Sep4" type="HSeparator" parent="Control/MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Exit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Exit the Configurations Menu."
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="GIFDeleteConfirmation" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "Warning!"
initial_position = 4
size = Vector2i(623, 210)
theme = ExtResource("4_lrmn4")
ok_button_text = " Proceed "
dialog_text = " Pressing 'Proceed' will delete ALL GIFs in 
              'Dialoguer Assets/GIFs'.
            Do you want to continue?"
cancel_button_text = " Cancel "
script = ExtResource("5_tkr1x")

[node name="AssetsDeleteConfirmation" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Warning!"
initial_position = 4
size = Vector2i(545, 336)
theme = ExtResource("4_lrmn4")
ok_button_text = " Proceed "
dialog_text = "      Pressing 'Proceed' will move
the entire 'Dialoguer Assets' Folder,
     including any Folders and Files
     within the Folder to the Trash
         and generate a new one.
         Do you want to continue?"
cancel_button_text = " Cancel "
script = ExtResource("6_p4uu7")

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="toggled" from="Control/MarginContainer/VBoxContainer/AutoOpenGIFsFolder" to="." method="_on_auto_open_gi_fs_folder_toggled"]
[connection signal="toggled" from="Control/MarginContainer/VBoxContainer/AutoCleanup" to="." method="_on_auto_cleanup_toggled"]
[connection signal="toggled" from="Control/MarginContainer/VBoxContainer/DisableTitleShaders" to="." method="_on_disable_title_shaders_toggled"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/DeleteGIFs" to="." method="_on_delete_gi_fs_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/DeleteAssetsFolders" to="." method="_on_delete_assets_folders_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="confirmed" from="GIFDeleteConfirmation" to="GIFDeleteConfirmation" method="_on_confirmed"]
[connection signal="confirmed" from="AssetsDeleteConfirmation" to="AssetsDeleteConfirmation" method="_on_confirmed"]
